cambios placas y grafica

--- a/app/src/main/res/layout/activity_grafica_placas.xml
+++ b/app/src/main/res/layout/activity_grafica_placas.xml
@@ -7,22 +7,26 @@
     android:orientation="vertical"
     tools:context="com.example.juan.foodapp.controlador.GraficaPlacasActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="391dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="344dp"
+        android:layout_marginTop="30dp">
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chartPlacas"
-            android:layout_width="388dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp">
+            android:orientation="vertical">
 
-        </com.github.mikephil.charting.charts.LineChart>
-    </LinearLayout>
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chartPlacas"
+                android:layout_width="388dp"
+                android:layout_height="match_parent"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="0dp">
+
+            </com.github.mikephil.charting.charts.LineChart>
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,8 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/btnAgregar"
