--- a/app/src/main/res/layout/activity_vista_placas_principal.xml
+++ b/app/src/main/res/layout/activity_vista_placas_principal.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/claro"
     android:id="@+id/placasPrincipal"
-    tools:context=".controlador.VistaPlacasPrincipal"
+    tools:context=".controlador.ControlPlacasPrincipal"
     >
 
     <GridLayout
@@ -33,6 +33,16 @@
             android:textStyle="normal|bold"
             android:textSize="18sp" />
         <TextView />
+        <TextView
+            android:text="Agua"
+            android:layout_width="169dp"
+            android:layout_marginLeft="-155dp"
+            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_vertical"
+            android:layout_row="7"
+            android:layout_column="1"
+            android:textColor="@color/white" />
 
         <TextView
             android:text="Datos del fluido de servicio (Fluido Caliente):"
@@ -40,7 +50,7 @@
             android:background="@color/oscuro"
             android:layout_height="45dp"
             android:id="@+id/textVw5"
-            android:layout_row="5"
+            android:layout_row="6"
             android:layout_column="0"
             android:textColor="@color/white"
             android:textAlignment="center"
@@ -54,7 +64,7 @@
             android:background="@color/oscuro"
             android:layout_height="45dp"
             android:id="@+id/tetVw5"
-            android:layout_row="8"
+            android:layout_row="10"
             android:layout_column="0"
             android:textColor="@color/white"
             android:textAlignment="center"
@@ -68,7 +78,7 @@
             android:background="@color/oscuro"
             android:layout_height="45dp"
             android:id="@+id/tetw5"
-            android:layout_row="10"
+            android:layout_row="12"
             android:layout_column="0"
             android:textColor="@color/white"
             android:textAlignment="center"
@@ -78,7 +88,21 @@
         <TextView />
 
 
+        <EditText
+            android:id="@+id/entrada1"
 
+            style="@android:style/Widget.DeviceDefault.EditText"
+            android:layout_width="83dp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_gravity="fill_vertical"
+            android:layout_marginLeft="-155dp"
+            android:layout_row="3"
+            android:ems="10"
+            android:hint="Ej: 000"
+            android:inputType="number|numberDecimal"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
         <EditText
             android:layout_width="83dp"
 
@@ -86,14 +110,15 @@
             android:layout_marginLeft="-155dp"
             android:textColor="@color/white"
             android:inputType="number|numberDecimal"
-            android:hint="Ej: 000"
+            android:hint="Ej. Leche"
             android:layout_row="2"
             android:layout_gravity="fill_vertical"
             android:layout_column="1"
             android:ems="10"
-            android:id="@+id/entrada1"
+            android:id="@+id/campoAlimentoConsiderar"
             style="@android:style/Widget.DeviceDefault.EditText"
             android:textSize="18sp" />
+
 
 
         <TextView
@@ -103,6 +128,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/textView6"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@color/white" />
+        <TextView
+            android:text="Alimento a considerar:"
+            android:layout_width="169dp"
+            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_vertical"
             android:layout_row="2"
             android:layout_column="0"
             android:textAppearance="@style/TextAppearance.AppCompat"
@@ -116,24 +151,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/textVi6"
-            android:layout_row="3"
+            android:layout_row="4"
             android:layout_column="2"
             android:textColor="@color/white" />
 
 
         <EditText
+            android:id="@+id/entrada2"
+            style="@android:style/Widget.DeviceDefault.EditText"
             android:layout_width="83dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="-155dp"
-            android:textColor="@color/white"
-            android:inputType="number|numberDecimal"
-            android:hint="Ej: 000"
-            android:layout_row="3"
-            android:layout_gravity="fill_vertical"
             android:layout_column="1"
+            android:layout_gravity="fill_vertical"
+            android:layout_marginLeft="-155dp"
+            android:layout_row="4"
             android:ems="10"
-            android:id="@+id/entrada2"
-            style="@android:style/Widget.DeviceDefault.EditText"/>
+            android:hint="Ej: 000"
+            android:inputType="number|numberDecimal"
+            android:textColor="@color/white" />
         <EditText
             android:layout_width="83dp"
             android:layout_height="wrap_content"
@@ -141,7 +176,7 @@
             android:textColor="@color/white"
             android:inputType="number|numberDecimal"
             android:hint="Ej: 000"
-            android:layout_row="9"
+            android:layout_row="11"
             android:layout_gravity="fill_vertical"
             android:layout_column="1"
             android:ems="10"
@@ -155,45 +190,45 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/textView61"
-            android:layout_row="3"
+            android:layout_row="4"
             android:layout_column="0"
             android:textColor="@color/white" />
 
 
         <EditText
+            android:id="@+id/entrada3"
+            style="@android:style/Widget.DeviceDefault.EditText"
             android:layout_width="83dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="-155dp"
-            android:textColor="@color/white"
-            android:inputType="number|numberDecimal"
-            android:hint="Ej: 000"
-            android:layout_row="4"
-            android:layout_gravity="fill_vertical"
             android:layout_column="1"
+            android:layout_gravity="fill_vertical"
+            android:layout_marginLeft="-155dp"
+            android:layout_row="5"
             android:ems="10"
-            android:id="@+id/entrada3"
-            style="@android:style/Widget.DeviceDefault.EditText"/>
+            android:hint="Ej: 000"
+            android:inputType="number|numberDecimal"
+            android:textColor="@color/white" />
 
         <TextView
-            android:text="Temperatura del alimento a la entrada de la sección:"
-            android:layout_width="162dp"
-            android:padding="10dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_vertical"
-            android:id="@+id/textView63241"
-            android:layout_row="4"
-            android:layout_column="0"
-            android:textColor="@color/white" />
-        <TextView
-            android:text="Temperatura del alimento a la entrada de la sección:"
+            android:text="Temperatura del fluido de servicio a la entrada de la sección:"
             android:layout_width="169dp"
             android:padding="10dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/extView6"
-            android:layout_row="6"
+            android:layout_row="8"
             android:layout_column="0"
             android:textColor="@color/white" />
+        <TextView
+            android:text="Fluido de servicio:"
+            android:layout_width="169dp"
+            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_vertical"
+            android:layout_row="7"
+            android:layout_column="0"
+            android:textColor="@color/white" />
+
 
         <TextView
             android:text="(L/s)"
@@ -203,24 +238,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/tetVi6"
-            android:layout_row="6"
+            android:layout_row="8"
             android:layout_column="2"
             android:textColor="@color/white" />
 
 
         <EditText
+            android:id="@+id/entrada4"
+            style="@android:style/Widget.DeviceDefault.EditText"
             android:layout_width="83dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="-155dp"
-            android:textColor="@color/white"
-            android:inputType="number|numberDecimal"
-            android:hint="Ej: 000"
-            android:layout_row="6"
-            android:layout_gravity="fill_vertical"
             android:layout_column="1"
+            android:layout_gravity="fill_vertical"
+            android:layout_marginLeft="-155dp"
+            android:layout_row="8"
             android:ems="10"
-            android:id="@+id/entrada4"
-            style="@android:style/Widget.DeviceDefault.EditText"/>
+            android:hint="Ej: 000"
+            android:inputType="number|numberDecimal"
+            android:textColor="@color/white" />
 
         <TextView
             android:text="Coeficiente de incrustación para el fluido caliente:"
@@ -229,7 +264,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/teView61"
-            android:layout_row="7"
+            android:layout_row="9"
             android:layout_column="0"
             android:textColor="@color/white" />
         <TextView
@@ -239,44 +274,54 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/teViw61"
-            android:layout_row="9"
+            android:layout_row="11"
+            android:layout_column="0"
+            android:textColor="@color/white" />
+        <TextView
+            android:text="Nombre del informe:"
+            android:layout_width="192dp"
+            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_vertical"
+            android:layout_row="14"
             android:layout_column="0"
             android:textColor="@color/white" />
 
 
         <TextView
-            android:text="°C"
+            android:text="N.A"
             android:layout_width="162dp"
             android:layout_marginLeft="-115dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/tetV"
-            android:layout_row="4"
+            android:layout_row="5"
             android:layout_column="2"
             android:textColor="@color/white" />
+
         <EditText
+            android:id="@+id/entrada5"
+            style="@android:style/Widget.DeviceDefault.EditText"
             android:layout_width="83dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="-155dp"
-            android:textColor="@color/white"
-            android:inputType="number|numberDecimal"
-            android:hint="Ej: 000"
-            android:layout_row="7"
-            android:layout_gravity="fill_vertical"
             android:layout_column="1"
+            android:layout_gravity="fill_vertical"
+            android:layout_marginLeft="-155dp"
+            android:layout_row="9"
             android:ems="10"
-            android:id="@+id/entrada5"
-            style="@android:style/Widget.DeviceDefault.EditText"/>
+            android:hint="Ej: 000"
+            android:inputType="number|numberDecimal"
+            android:textColor="@color/white" />
 
         <TextView
-            android:text="Temperatura del alimento a la entrada de la sección:"
+            android:text="Coeficiente de incrustación para el fluido frío:"
             android:layout_width="162dp"
             android:padding="10dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/textView6341"
-            android:layout_row="4"
+            android:layout_row="5"
             android:layout_column="0"
             android:textColor="@color/white" />
 
@@ -288,7 +333,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/teti6"
-            android:layout_row="7"
+            android:layout_row="9"
             android:layout_column="2"
             android:textColor="@color/white" />
         <TextView
@@ -299,7 +344,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/tti6"
-            android:layout_row="9"
+            android:layout_row="11"
             android:layout_column="2"
             android:textColor="@color/white" />
 
@@ -310,18 +355,30 @@
             android:textColor="@color/white"
             android:inputType="number|numberDecimal"
             android:hint="Identificador"
-            android:layout_row="11"
+            android:layout_row="13"
             android:layout_gravity="fill_vertical"
             android:layout_column="1"
             android:ems="10"
             android:id="@+id/entradaNombre" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-155dp"
+            android:textColor="@color/white"
+            android:inputType="number|numberDecimal"
+            android:hint="Ej. Informe 3"
+            android:layout_row="14"
+            android:layout_gravity="fill_vertical"
+            android:layout_column="1"
+            android:ems="10"
+            android:id="@+id/campoInforme" />
 
         <Button
             android:text="Ver Tabla De Resultados"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnTabla"
-            android:layout_row="13"
+            android:layout_row="15"
             android:layout_column="0"
             style="@android:style/Widget.DeviceDefault.Button" />
 
@@ -330,7 +387,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnGrafica"
-            android:layout_row="12"
+            android:layout_row="115"
             android:layout_column="0"
             style="@android:style/Widget.DeviceDefault.Button" />
 
@@ -339,12 +396,12 @@
         <TextView
             android:text="°C"
             android:layout_width="175dp"
-            android:layout_marginLeft="-115dp"
+            android:layout_marginLeft="-105dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
             android:id="@+id/textVi"
-            android:layout_row="2"
+            android:layout_row="3"
             android:layout_column="2"
             android:textColor="@color/white" />
 
@@ -354,7 +411,7 @@
             android:layout_width="174dp"
             android:layout_height="wrap_content"
             android:id="@+id/btnGuardarDatos"
-            android:layout_row="11"
+            android:layout_row="13"
             android:layout_column="0"
             style="@android:style/Widget.DeviceDefault.Button" />
 
