--- a/app/src/main/res/layout/activity_tabla_resultados.xml
+++ b/app/src/main/res/layout/activity_tabla_resultados.xml
@@ -12,6 +12,7 @@
             android:layout_height="match_parent">
 
             <TableLayout
+                android:id="@+id/tabla"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
