--- a/app/src/main/res/layout/activity_grafica_placas.xml
+++ b/app/src/main/res/layout/activity_grafica_placas.xml
@@ -1,52 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.juan.foodapp.controlador.GraficaPlacasActivity">
+    android:orientation="horizontal"
+    android:weightSum="1">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="344dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="30dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/chartPlacas"
-                android:layout_width="388dp"
-                android:layout_height="match_parent"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="0dp">
+                android:layout_width="588dp"
+                android:layout_height="match_parent">
 
             </com.github.mikephil.charting.charts.LineChart>
         </LinearLayout>
     </HorizontalScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/nuevoCaudal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
-
-        <Button
-            android:id="@+id/btnAgregar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Button" />
-
-    </LinearLayout>
 </LinearLayout>
