--- a/app/src/main/res/layout/activity_grafica_tanque.xml
+++ b/app/src/main/res/layout/activity_grafica_tanque.xml
@@ -23,4 +23,26 @@
             </com.github.mikephil.charting.charts.LineChart>
         </LinearLayout>
     </HorizontalScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/temperatura"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Temperatura Inicial Alimento"
+            android:inputType="number|numberDecimal" />
+
+        <Button
+            android:id="@+id/btonAceptar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Aceptar" />
+    </LinearLayout>
 </LinearLayout>
