Mejora Vista Placas

--- a/app/src/main/res/layout/activity_vista_placas_principal.xml
+++ b/app/src/main/res/layout/activity_vista_placas_principal.xml
@@ -145,7 +145,7 @@
         <TextView
             android:text="(L/s)"
             android:layout_width="162dp"
-            android:layout_marginLeft="-115dp"
+            android:layout_marginLeft="-95dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
@@ -171,7 +171,7 @@
         <EditText
             android:layout_width="83dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="-155dp"
+            android:layout_marginLeft="-145dp"
             android:textColor="@color/white"
             android:inputType="number|numberDecimal"
             android:hint="Ej: 000"
@@ -232,7 +232,7 @@
         <TextView
             android:text="(L/s)"
             android:layout_width="162dp"
-            android:layout_marginLeft="-115dp"
+            android:layout_marginLeft="-95dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
@@ -290,7 +290,7 @@
         <TextView
             android:text="N.A"
             android:layout_width="162dp"
-            android:layout_marginLeft="-115dp"
+            android:layout_marginLeft="-95dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
@@ -327,7 +327,7 @@
         <TextView
             android:text="N.A."
             android:layout_width="162dp"
-            android:layout_marginLeft="-115dp"
+            android:layout_marginLeft="-95dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
@@ -338,7 +338,7 @@
         <TextView
             android:text="W/m^2 °C"
             android:layout_width="162dp"
-            android:layout_marginLeft="-115dp"
+            android:layout_marginLeft="-90dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
@@ -352,7 +352,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="-155dp"
             android:textColor="@color/white"
-            android:hint="Identificador"
+            android:hint="Ej. Practica1"
             android:layout_row="13"
             android:layout_gravity="fill_vertical"
             android:layout_column="1"
@@ -388,12 +388,10 @@
             android:layout_column="0"
             style="@android:style/Widget.DeviceDefault.Button" />
 
-
-
         <TextView
             android:text="°C"
             android:layout_width="175dp"
-            android:layout_marginLeft="-105dp"
+            android:layout_marginLeft="-100dp"
             android:paddingTop="25dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_vertical"
